# vercel-rust-functions

./: .gitignore  Cargo.toml  package-lock.json  package.json
api/: hello.rs
