[package]
name = "vercel-rust-functions"
version = "0.1.0"
edition = "2021"


[dependencies]
tokio = { version = "1", features = ["macros"] }
serde_json = { version = "1", features = ["raw_value"] }
# Documentation: https://docs.rs/vercel_runtime/latest/vercel_runtime
vercel_runtime = { version = "0.2.1" }

[[bin]]
name = "hello"
path = "api/hello.rs"

